--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "description": "",
   "devDependencies": {
     "@types/express": "^5.0.3",
+    "@types/uuid": "^10.0.0",
     "tslint": "^5.20.1",
     "typescript": "^5.9.2"
   },
@@ -23,6 +24,7 @@
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "socket.io": "^4.8.1",
+    "uuid": "^13.0.0",
     "watch": "^0.13.0"
   }
 }
