--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "main": "dist/src/index.js",
   "scripts": {
-    "prebuild": "tslint -c tslint.json -p tsconfig.json --fix",
     "build": "tsc",
     "watch": "tsc -w",
     "prestart": "npm run build",
@@ -23,6 +22,7 @@
     "concurrently": "^6.1.0",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
+    "peer": "^1.0.2",
     "socket.io": "^4.8.1",
     "uuid": "^13.0.0",
     "watch": "^0.13.0"
