--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "build": "tsc",
     "watch": "tsc -w",
     "prestart": "npm run build",
-    "start": "nodemon .",
+    "start": "node dist/src/index.js",
     "dev": "npx concurrently --kill-others \"npm run watch\" \"npm start\""
   },
   "author": "",
