--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "main": "dist/src/index.js",
-  "scripts": {
-    "build": "tsc",
-    "watch": "tsc -w",
-    "prestart": "npm run build",
-    "start": "node dist/src/index.js",
-    "dev": "npx concurrently --kill-others \"npm run watch\" \"npm start\""
-  },
+  "main": "dist/index.js",
+"scripts": {
+  "build": "tsc",
+  "start": "node dist/index.js",
+  "watch": "tsc -w",
+  "dev": "npx concurrently --kill-others \"npm run watch\" \"nodemon dist/index.js\""
+},
   "author": "",
   "license": "ISC",
   "description": "",
